Fix for points buttons on safari

--- a/VotingApplication/VotingApplication.Web/Content/Scss/Site.scss
+++ b/VotingApplication/VotingApplication.Web/Content/Scss/Site.scss
@@ -161,6 +161,7 @@ button {
     > button {
         border-radius: 0px;
         border-width: 0px;
+        margin: 0px;
     }
 }
 
